# Tcs-Hackathon

backend/: .env.example  .gitignore  README.md  client.py  consolidated_result.json  ingest_runner.py  langgraph.json  model_config.py  pyproject.toml
backend/data/: __init__.py  document_loader.py  synthetic_data_generator.py
backend/data/row_data/Finance/: BBD_balencesheet.csv  BBD_cashflow.csv  BBD_incomestatement.csv  Supernova_balencesheet.csv  Supernova_cashflow.csv  Supernova_incomestatement.csv  XYZ_balencesheet.csv  XYZ_cashflow.csv  XYZ_incomestatement.csv
backend/data/row_data/HR Data/: BBD_LTD_employee_data.csv  Rasputil_Petroleum_LTD_employee_data.csv  Supernova_employee_data.csv  Techno_Box_employee_data.csv
backend/data/row_data/HR Data/BBD_Policies/: BBD_Software_b2b_license_full.md  BBD_Software_b2b_partnership_full.md  BBD_Software_employee_handbook_full.md  BBD_Software_engagement_agreement_full.md  BBD_Software_environmental_policy_full.md  BBD_Software_family_manifesto_full.md  BBD_Software_general_services_agreement_full.md  BBD_Software_mnda_full.md
backend/data/row_data/HR Data/Supernova_Policies/: supernova_b2b_licensing.md  supernova_b2b_partnership.md  supernova_gsa.md  (+5 more)
backend/scripts/: run_demo.py  run_dev.sh  run_smoke_test.py  setup_data.py  test_api.py  test_hr_agent.py  validate_agents.py  validate_setup.py
backend/src/: __init__.py
backend/src/analyst_agent/: __init__.py  graph.py  state.py  tools.py
backend/src/api/: app.py
backend/src/common/: __init__.py  errors.py  guardrails.py  intent_classifier.py  logging_config.py  state.py  utils.py
backend/src/config/: __init__.py  llm_config.py  settings.py
backend/src/finance_agent/: __init__.py  graph.py  prompts.py  state.py  tools.py
backend/src/finance_agent/knowledge/: finance_standard.md  tcs_benchmarks.json
backend/src/hr_agent/: README.md  __init__.py  graph.py  prompts.py  state.py  tools.py
backend/src/hr_agent/knowledge/: hr_benchmarks.json  hr_rubric_tcs_baseline.md  meta_prompt_tcs_baseline.md  tcs_hr_policy.md
backend/src/legal_agent/: __init__.py  graph.py  prompts.py  state.py  tools.py
backend/src/legal_agent/utils/: __init__.py  retrieval.py  scoring.py
backend/src/rag_agent/: __init__.py  base.py  chunker.py  deduplicator.py  graph.py  ingest.py  loaders.py  metadata_normalizer.py  retrieve.py  state.py  tools.py
backend/src/supervisor/: __init__.py  graph.py  models.py  parsers.py  planner.py  prompts.py  state.py
backend/tests/: conftest.py  test_due_diligence.py  test_example_agent.py  test_supervisor.py
backend/tests/fixtures/: sample_inputs.json
mcp-server/: .env.example  README.md  pyproject.toml
mcp-server/config/: tool_config.yaml
mcp-server/data/: social_media_opinions.json
mcp-server/scripts/: run_dev.sh  run_smoke_test.py
mcp-server/src/: server.py
mcp-server/src/common/: __init__.py  errors.py  logging_config.py
mcp-server/src/config/: __init__.py  settings.py
mcp-server/src/tools/: __init__.py  base.py  example_tools.py  social_media_tools.py
(+67 files in other folders)
